# shitcoin

./: .gitmodules  Cargo.toml
shitcoin_analysis/: 1XXZVgHFf6suGZ4Je5x7Rz67gHFA6PjSMLpEofz4wB4.parquet  anlysis.ipynb  autoformer.py  backtest.py  data_fetcher.py  data_processing.py  fall_sell.py  feature_engine.py  feature_get.py  feature_get_win.py  feature_reader.py  filter_freeze.py  keypair.json  linear_model.py  log.txt  model_epoch_0_14.pth  plot_data.py  random_forest.py  random_forest_backtest.py  requirements.txt  rise_sell.py  sandwich_filter.py  scaler_params.json  trading_signal.py  transformer.py  transformerXL.py  util.py
shitcoin_analysis/processed_data/: 134FqB1FG5e1rTBZ3nUi3k5vYbxEQRbyJxB3QocJVXQs_transactions.xlsx_features.csv  134FqB1FG5e1rTBZ3nUi3k5vYbxEQRbyJxB3QocJVXQs_transactions.xlsx_targets.csv  1XXZVgHFf6suGZ4Je5x7Rz67gHFA6PjSMLpEofz4wB4.parquet_features.parquet  1XXZVgHFf6suGZ4Je5x7Rz67gHFA6PjSMLpEofz4wB4.parquet_targets.parquet  22BXca1NA4c8fwgRu44w6xWzFzKBZWDWPxa9RLYEjN5E_transactions.xlsx_features.csv  22BXca1NA4c8fwgRu44w6xWzFzKBZWDWPxa9RLYEjN5E_transactions.xlsx_targets.csv  25mXXh1sLaxHPpiQTbv5PiPmKogRPb9v8Qct3KDY2eKN_transactions.xlsx_features.csv  25mXXh1sLaxHPpiQTbv5PiPmKogRPb9v8Qct3KDY2eKN_transactions.xlsx_targets.csv  25ohH1ZnbARxP4cCrdngg9ip9GUFkde8G6vucCxHw2rH_transactions.xlsx_features.csv  25ohH1ZnbARxP4cCrdngg9ip9GUFkde8G6vucCxHw2rH_transactions.xlsx_targets.csv  2An44t2GkvK9j58j8zscvzEBRsNsdWHLTrMgcP2Lp9UD_transactions.xlsx_features.csv  2An44t2GkvK9j58j8zscvzEBRsNsdWHLTrMgcP2Lp9UD_transactions.xlsx_targets.csv  2CaFrKcSre1r28URnFa5E8NnNRLcsBVQYzWmupkQtZvN_transactions.xlsx_features.csv  2CaFrKcSre1r28URnFa5E8NnNRLcsBVQYzWmupkQtZvN_transactions.xlsx_targets.csv  2D1sSfpC4Mutpc5PAJ88VP9G43FxXT6Fik8nvUg527Mv_transactions.xlsx_features.csv  2D1sSfpC4Mutpc5PAJ88VP9G43FxXT6Fik8nvUg527Mv_transactions.xlsx_targets.csv  2D8JfxujUCXFYnxWVHpskdgvZHNs9cSfimZwnDcPGZNs_transactions.xlsx_features.csv  2D8JfxujUCXFYnxWVHpskdgvZHNs9cSfimZwnDcPGZNs_transactions.xlsx_targets.csv  2Dy5Ac5QAScBXxvxHBR9fvy3vXeKvWAKGZ8FnBFq9NZb_transactions.xlsx_features.csv  2Dy5Ac5QAScBXxvxHBR9fvy3vXeKvWAKGZ8FnBFq9NZb_transactions.xlsx_targets.csv  2LRy5jfN5KEGmVj9VM3R2HZUJRZbPUZxMT4KkYnfBjfp_transactions.xlsx_features.csv  2LRy5jfN5KEGmVj9VM3R2HZUJRZbPUZxMT4KkYnfBjfp_transactions.xlsx_targets.csv  2LipnHB55wWg4hkTqctJsCtqwnFGnaPCLN24RFyZ62ip_transactions.xlsx_features.csv  2LipnHB55wWg4hkTqctJsCtqwnFGnaPCLN24RFyZ62ip_transactions.xlsx_targets.csv  2M216phL6S7Fme8u1bVVRBcjMy2dj1DaGWjLGPx3ne7W_transactions.xlsx_features.csv  2M216phL6S7Fme8u1bVVRBcjMy2dj1DaGWjLGPx3ne7W_transactions.xlsx_targets.csv  2M7tjrXEAYM7h7SDXMfD454D8jAMyWp4Xi7XNFrygQT6_transactions.xlsx_features.csv  2M7tjrXEAYM7h7SDXMfD454D8jAMyWp4Xi7XNFrygQT6_transactions.xlsx_targets.csv  2PWRre1ojdfF898AYNijZUmx8h8QF5Uj4BWvZrUTVVzj_transactions.xlsx_features.csv  2PWRre1ojdfF898AYNijZUmx8h8QF5Uj4BWvZrUTVVzj_transactions.xlsx_targets.csv  2QAS8ZDTWdwLhPzrQ9jCYF96s22EyQAktghXrWw3bFLF_transactions.xlsx_features.csv  2QAS8ZDTWdwLhPzrQ9jCYF96s22EyQAktghXrWw3bFLF_transactions.xlsx_targets.csv  2TZShRtBgSAjYxfLGC82o2Yh3UVrzXdeZiibFPfcShZu_transactions.xlsx_features.csv  2TZShRtBgSAjYxfLGC82o2Yh3UVrzXdeZiibFPfcShZu_transactions.xlsx_targets.csv  2UTZ6YJjjuhwfQmZNmzKDs9uMsnRzDihEgFz7nWKzSLb_transactions.xlsx_features.csv  2UTZ6YJjjuhwfQmZNmzKDs9uMsnRzDihEgFz7nWKzSLb_transactions.xlsx_targets.csv  2UZRK4w8bZfeHPYNYtux41FE1Hm6aJFcd69BqAek55eB_transactions.xlsx_features.csv  2UZRK4w8bZfeHPYNYtux41FE1Hm6aJFcd69BqAek55eB_transactions.xlsx_targets.csv  2Viqdrd7F63K6HLaZ11XmwpDUKKfx3eHmybg2RkxKrWa_transactions.xlsx_features.csv  2Viqdrd7F63K6HLaZ11XmwpDUKKfx3eHmybg2RkxKrWa_transactions.xlsx_targets.csv  (+1376 more)
src/: data.rs  feature_engine.rs  jito.rs  main.rs  priority_fee.rs  pump_fun.rs  random_forest.rs  raydium_amm.rs  router.rs  strategy.rs  subscription.rs  token_authenticator.rs  transaction_executor.rs
