[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
tokio-tls = "0.3.1"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raydium_amm = { git = "https://github.com/aMagicNeko/raydium_amm.git" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
solana-account-decoder = "1.18.16"
solana-client = "1.14.5"
solana-sdk = "1.14.5"
solana-program = "1.18.16"
anyhow = "1.0.53"
futures = "0.3"
futures-util = "0.3"
solana-transaction-status = "1.9.4"
solana-metrics = "1.14.5"
log = "0.4.17"
env_logger = "0.11.3"
lazy_static = "1.4"
bincode = { version = "1.3.3" }
base64 = "0.13"
#arrayref = "0.3.6"
#arrform = { git = "https://github.com/raydium-io/arrform" }
xlsxwriter = "0.6.0"
serum_dex = {git = "https://github.com/project-serum/serum-dex.git"}
hex = "0.4"
once_cell = "1.9.0"
[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
