[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
tokio-tls = "0.3.1"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raydium_amm = { git = "https://github.com/aMagicNeko/raydium_amm.git" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
solana-account-decoder = "1.18.17"
solana-client = "1.14.5"
solana-sdk = "1.14.5"
solana-program = "=1.18.17"
anyhow = "1.0.53"
futures = "0.3"
futures-util = "0.3"
solana-transaction-status = "1.9.4"
solana-metrics = "1.14.5"
log = "0.4.17"
env_logger = "0.11.3"
lazy_static = "1.4"
bincode = { version = "1.3.3" }
base64 = "0.13"
#arrayref = "0.3.6"
#arrform = { git = "https://github.com/raydium-io/arrform" }
#xlsxwriter = "0.6.0"
polars = { version = "0.41.0", features = ["parquet"] }
serum_dex = {git = "https://github.com/project-serum/serum-dex.git"}
hex = "0.4"
once_cell = "1.9.0"
jsonrpc-client-transports = "18.0.0"
jsonrpc-core-client = "18.0.0"
bs58 = "0.5.1"
ort = "2.0.0-rc.2"
tonic = { version = "0.10", features = [ "tls", "tls-roots", "tls-webpki-roots"] }
jito-protos = { path = "src/jito-protos" }
thiserror = "1.0.61"
ndarray = "0.15.6"
prost-types = "0.12"

[patch.crates-io]
solana-program = { git = "https://github.com/solana-labs/solana", tag = "v1.18.17" }

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]